Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <img src="stazzema.png" alt="Stazzema">
             <span>Stazzema</span>
         </a>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="grid-item">
+        <a href="https://ersudriver.github.io/ersuoperator/easteregg" class="grid-item">
             <img src="icona8.svg" alt="Link 8">
             <span>Link 8</span>
         </a>
@@ -165,3 +165,4 @@
 
 </body>
 </html>
+
