--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
             <span>Stazzema</span>
         </a>
         <a href="https://ersudriver.github.io/ersuoperator/easteregg" class="grid-item">
-            <img src="icona8.svg" alt="Link 8">
-            <span>Link 8</span>
+            <img src="vuoto.svg" alt="vuoto">
         </a>
     </main>
 
 </body>
 </html>
+
 
