--- a/easteregg.html
+++ b/easteregg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Vuota</title>
+    <title>Vuoto</title>
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,13 +34,14 @@
         }
 
         .center-img {
-            max-width: 250px;
-            width: 80%;
+            max-width: 500px; /* Raddoppiato da 250px a 500px */
+            width: 90%;       /* Aumentato leggermente per occupare più spazio su mobile */
             height: auto;
             display: block;
             margin-bottom: 40px;
-            cursor: pointer; /* Fa capire che l'immagine è cliccabile */
+            cursor: pointer;
             transition: transform 0.2s;
+            border-radius: 10px;
         }
 
         .center-img:active {
