Enhance center image with hover scaling effect
Add hover effect to center image for scaling.

--- a/easteregg.html
+++ b/easteregg.html
@@ -44,6 +44,10 @@
             border-radius: 10px;
         }
 
+        .center-img:hover {
+            transform: scale(1.05); /* Si ingrandisce del 5% quando passi il mouse */
+        }
+
         .center-img:active {
             transform: scale(0.95); /* Effetto pressione al click */
         }
