--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
     </footer>
 
     <main class="main-content">
-        <a href="https://sito1.com" class="grid-item">
+        <a href="https://drive.google.com/drive/u/0/folders/1r5QDvhz84Pn3EYgovvnQAvMo9kwJN0Z_" class="grid-item">
             <img src="camaiore.png" alt="Camaiore">
-            <span>Camaiore</span>
+            <span>Camaiore OK</span>
         </a>
         <a href="https://sito2.com" class="grid-item">
             <img src="fdm.png" alt="Forte dei Marmi">
@@ -139,14 +139,14 @@
             <img src="massarosa.png" alt="Massarosa">
             <span>Massarosa</span>
         </a>
-        <a href="https://sito4.com" class="grid-item">
+        <a href="https://drive.google.com/drive/u/0/folders/17ZPAcVHmZygO3AwKNfkPIEgZfSrXhiv1" class="grid-item">
             <img src="montignoso.png" alt="Montignoso">
-            <span>Montignoso</span>
+            <span>Montignoso OK</span>
         </a>
 
         <a href="https://drive.google.com/drive/folders/1PMXmsSXfSTzlY-qTlGKgC5AEAp4cE6DM" class="grid-item">
             <img src="pietrasanta.png" alt="Pietrasanta">
-            <span>Pietrasanta</span>
+            <span>Pietrasanta OK</span>
         </a>
         <a href="https://sito6.com" class="grid-item">
             <img src="seravezza.png" alt="Seravezza">
@@ -164,5 +164,6 @@
 
 </body>
 </html>
+
 
 
