--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 </head>
 <body>
 
-    <img src="header.jpg" alt="Header" class="header-img">
+    <img src="hder.jpg" alt="Header" class="header-img">
 
     <footer>
         <div class="footer-links">
@@ -164,6 +164,7 @@
 
 </body>
 </html>
+
 
 
 
