Change background and text color in index.html
Updated background color and text color in styles.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
-            background-color: #a4c445;  
+            background-color: #a4bb5b; /* Lo sfondo che abbiamo cambiato prima */
+            color: #2c603d;            /* Nuovo colore del testo principale */  
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -164,6 +165,7 @@
 
 </body>
 </html>
+
 
 
 
