--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
             display: block;
         }
 
-        footer {
-            background-color: rgba(0, 0, 0, 0.7); 
+       footer {
+            /* COLORE BARRA AGGIORNATO */
+            background-color: #2c603d; 
             color: white;
             padding: 20px;
             text-align: center;
@@ -165,6 +166,7 @@
 
 </body>
 </html>
+
 
 
 
