--- a/operatori.html
+++ b/operatori.html
@@ -113,7 +113,7 @@
         <h2>Accesso Effettuato</h2>
         <p>Puoi scaricare l'intera rubrica cliccando il tasto qui sotto:</p>
         
-        <a href="tutti-i-contatti.vcf" class="btn-download">
+        <a href="3rU2bIc8aE5sR9u1r.vcf" class="btn-download">
             scarica tutti i contatti
         </a>
 
