--- a/meccanici.html
+++ b/meccanici.html
@@ -12,7 +12,7 @@
         body {
             font-family: 'Josefin Sans', sans-serif;
             /* Impostazione dello sfondo con il colore richiesto */
-            background-color: #a4c445; 
+            background-color: #a4bb5b; 
             padding: 20px;
             display: flex;
             flex-direction: column;
