--- a/coordinatori.html
+++ b/coordinatori.html
@@ -11,7 +11,7 @@
     <style>
         body {
             font-family: 'Josefin Sans', sans-serif;
-            background-color: #a4c445; 
+            background-color: #a4bb5b; 
             padding: 20px;
             display: flex;
             flex-direction: column;
