--- a/index.html
+++ b/index.html
@@ -162,9 +162,10 @@
             <span>Stazzema</span>
         </a>
         <a href="https://ersudriver.github.io/ersuoperator/easteregg" class="grid-item">
-            <img src="vuoto.svg" alt="vuoto">
+            <img src="vuoto.png" alt="vuoto">
         </a>
     </main>
 
 </body>
 </html>
+
