--- a/easteregg.html
+++ b/easteregg.html
@@ -12,7 +12,7 @@
     
     <style>
         body {
-            background-color: #a5c54a;
+            background-color: #abbf6e;
             font-family: 'Josefin Sans', sans-serif;
             margin: 0;
             padding: 0;
