--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
             <img src="camaiore.png" alt="Camaiore">
             <span>Camaiore</span>
         </a>
-        <a href="https://sito2.com" class="grid-item">
+        <a href="https://ersudriver.github.io/ersuoperator/#" class="grid-item">
             <img src="fdm.png" alt="Forte dei Marmi">
             <span>Forte dei Marmi</span>
         </a>
 
-        <a href="https://sito3.com" class="grid-item">
+        <a href="https://ersudriver.github.io/ersuoperator/#" class="grid-item">
             <img src="massarosa.png" alt="Massarosa">
             <span>Massarosa</span>
         </a>
@@ -152,12 +152,12 @@
             <img src="pietrasanta.png" alt="Pietrasanta">
             <span>Pietrasanta</span>
         </a>
-        <a href="https://sito6.com" class="grid-item">
+        <a href="https://ersudriver.github.io/ersuoperator/#" class="grid-item">
             <img src="seravezza.png" alt="Seravezza">
             <span>Seravezza</span>
         </a>
 
-        <a href="https://sito7.com" class="grid-item">
+        <a href="https://ersudriver.github.io/ersuoperator/#" class="grid-item">
             <img src="stazzema.png" alt="Stazzema">
             <span>Stazzema</span>
         </a>
@@ -168,4 +168,5 @@
 
 </body>
 </html>
+
 
