--- a/rubrica_aziendale.html
+++ b/rubrica_aziendale.html
@@ -30,13 +30,11 @@
             overflow: hidden;
         }
 
-        /* Contenitore per rendere l'iframe fluido */
         .responsive-iframe-container {
             position: relative;
             overflow: hidden;
             width: 100%;
-            /* Rapporto d'aspetto: 16:9 o regolabile */
-            padding-top: 56.25%; 
+            padding-top: 65%; /* Leggermente più alto per mostrare più righe */
             height: 0;
         }
 
@@ -51,8 +49,20 @@
             border: none;
         }
 
+        .hint-box {
+            max-width: 1200px;
+            width: 100%;
+            margin-top: 15px;
+            padding: 15px;
+            background-color: #e7f3ff;
+            border-left: 5px solid #2196F3;
+            border-radius: 4px;
+            color: #0c5460;
+            font-size: 0.95em;
+        }
+
         footer {
-            margin-top: 20px;
+            margin-top: 30px;
             font-size: 0.8em;
             color: #777;
         }
@@ -60,12 +70,16 @@
 </head>
 <body>
 
-    <h1>La Mia Tabella Dati</h1>
+    <h1>Operatori</h1>
 
     <div class="container">
         <div class="responsive-iframe-container">
             <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS67eexfd9Plogb9viPBDF3GnSsaBAHn54ghW_qmWhlu3V5p5GsmYYG9f1lSFUldXxhM90AHhBZJGpB/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
         </div>
+    </div>
+
+    <div class="hint-box">
+        <strong>HINT:</strong> puoi usare la funzione "Trova nella pagina" del tuo browser per scrivere il nome che stai cercando.
     </div>
 
     <footer>
