--- a/rubrica_aziendale.html
+++ b/rubrica_aziendale.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rubrica Aziendale - Webview</title>
+    <title>Rubrica Aziendale</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -26,21 +26,19 @@
             width: 100%;
             max-width: 1200px;
             background: white;
-            padding: 5px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.1);
             border-radius: 8px;
-            overflow-x: auto; 
-            -webkit-overflow-scrolling: touch;
+            overflow: hidden; /* Mantiene i bordi arrotondati */
         }
 
-        /* Altezza verticale ottimizzata per smartphone */
         .iframe-wrapper {
             width: 100%;
-            height: 85vh; /* Occupa l'85% dell'altezza dello schermo */
-            min-height: 600px; 
+            /* Altezza generosa per smartphone */
+            height: 85vh; 
+            min-height: 500px;
         }
 
-        .iframe-wrapper iframe {
+        iframe {
             width: 100%;
             height: 100%;
             border: none;
@@ -61,9 +59,9 @@
 
         footer {
             margin-top: 30px;
-            padding-bottom: 20px;
             font-size: 0.8em;
             color: #777;
+            padding-bottom: 20px;
         }
     </style>
 </head>
@@ -73,7 +71,7 @@
 
     <div class="container">
         <div class="iframe-wrapper">
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSykf2Uj-6qS8Nl7W7f6-W9XyI6B8Y6vN_uLqK-Kk_9yI6B8Y6vN_uLqK-Kk_9yI6B8Y6vN_uLqK-Kk_9/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+            <iframe src="https://docs.google.com/spreadsheets/d/1d-cTpce5wSUAdDTgCtbjzYJoh8BdQlRccxcgFW5f1Ek/edit?rm=minimal"></iframe>
         </div>
     </div>
 
@@ -82,7 +80,7 @@
     </div>
 
     <footer>
-        Dati aggiornati automaticamente da Google Sheets
+        Dati gestiti tramite Google Sheets
     </footer>
 
 </body>
