--- a/rubrica_aziendale.html
+++ b/rubrica_aziendale.html
@@ -22,18 +22,31 @@
             text-align: center;
         }
 
+        /* Box suggerimento spostato sopra */
+        .hint-box {
+            max-width: 1200px;
+            width: 100%;
+            margin-bottom: 15px; /* Spazio sotto il box */
+            padding: 15px;
+            background-color: #e7f3ff;
+            border-left: 5px solid #2196F3;
+            border-radius: 4px;
+            color: #0c5460;
+            font-size: 0.9em;
+            box-sizing: border-box;
+        }
+
         .container {
             width: 100%;
             max-width: 1200px;
             background: white;
             box-shadow: 0 4px 15px rgba(0,0,0,0.1);
             border-radius: 8px;
-            overflow: hidden; /* Mantiene i bordi arrotondati */
+            overflow: hidden;
         }
 
         .iframe-wrapper {
             width: 100%;
-            /* Altezza generosa per smartphone */
             height: 85vh; 
             min-height: 500px;
         }
@@ -42,19 +55,6 @@
             width: 100%;
             height: 100%;
             border: none;
-        }
-
-        .hint-box {
-            max-width: 1200px;
-            width: 100%;
-            margin-top: 15px;
-            padding: 15px;
-            background-color: #e7f3ff;
-            border-left: 5px solid #2196F3;
-            border-radius: 4px;
-            color: #0c5460;
-            font-size: 0.9em;
-            box-sizing: border-box;
         }
 
         footer {
@@ -69,14 +69,14 @@
 
     <h1>Rubrica Aziendale</h1>
 
+    <div class="hint-box">
+        <strong>💡 HINT:</strong> puoi usare la funzione "Trova nella pagina" del tuo browser per scrivere il nome che stai cercando.
+    </div>
+
     <div class="container">
         <div class="iframe-wrapper">
             <iframe src="https://docs.google.com/spreadsheets/d/1d-cTpce5wSUAdDTgCtbjzYJoh8BdQlRccxcgFW5f1Ek/edit?rm=minimal"></iframe>
         </div>
-    </div>
-
-    <div class="hint-box">
-        <strong>💡 HINT:</strong> puoi usare la funzione "Trova nella pagina" del tuo browser per scrivere il nome che stai cercando.
     </div>
 
     <footer>
