--- a/rubrica_aziendale.html
+++ b/rubrica_aziendale.html
@@ -4,51 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rubrica Aziendale</title>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Josefin Sans', sans-serif;
             margin: 0;
             padding: 15px;
-            background-color: #f4f7f6;
+            background-color: #a4bb5b; /* Colore sfondo richiesto */
+            color: #2c603d; /* Colore testo richiesto */
             display: flex;
             flex-direction: column;
             align-items: center;
         }
 
         h1 {
-            color: #333;
+            color: #2c603d;
             margin-bottom: 20px;
-            font-size: 1.5rem;
+            font-size: 2rem;
+            font-weight: 600;
             text-align: center;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
 
-        /* Box suggerimento spostato sopra */
         .hint-box {
             max-width: 1200px;
             width: 100%;
-            margin-bottom: 15px; /* Spazio sotto il box */
+            margin-bottom: 15px;
             padding: 15px;
-            background-color: #e7f3ff;
-            border-left: 5px solid #2196F3;
+            background-color: rgba(255, 255, 255, 0.9); /* Bianco semitrasparente per leggibilità */
+            border-left: 5px solid #2c603d;
             border-radius: 4px;
-            color: #0c5460;
-            font-size: 0.9em;
+            color: #2c603d;
+            font-size: 1em;
             box-sizing: border-box;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
 
         .container {
             width: 100%;
             max-width: 1200px;
             background: white;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            border-radius: 8px;
+            box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+            border-radius: 12px;
             overflow: hidden;
         }
 
         .iframe-wrapper {
             width: 100%;
-            height: 85vh; 
-            min-height: 500px;
+            height: 80vh; 
+            min-height: 550px;
         }
 
         iframe {
@@ -59,8 +65,9 @@
 
         footer {
             margin-top: 30px;
-            font-size: 0.8em;
-            color: #777;
+            font-size: 0.9em;
+            color: #2c603d;
+            font-weight: 400;
             padding-bottom: 20px;
         }
     </style>
@@ -70,7 +77,7 @@
     <h1>Rubrica Aziendale</h1>
 
     <div class="hint-box">
-        <strong>💡 HINT:</strong> puoi usare la funzione "Trova nella pagina" del tuo browser per scrivere il nome che stai cercando.
+        <strong>💡SUGGERIMENTO:</strong> puoi usare la funzione "Trova nella pagina" del tuo browser per scrivere il nome che stai cercando.
     </div>
 
     <div class="container">
@@ -80,7 +87,7 @@
     </div>
 
     <footer>
-        Dati gestiti tramite Google Sheets
+        Dati gestiti tramite Google Sheets &bull; 2025
     </footer>
 
 </body>
