--- a/rubrica_aziendale.html
+++ b/rubrica_aziendale.html
@@ -42,6 +42,27 @@
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
 
+        /* Stile per il link Homepage */
+        .home-link {
+            max-width: 1200px;
+            width: 100%;
+            margin-bottom: 15px;
+            text-align: left;
+        }
+
+        .home-link a {
+            color: #2c603d;
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 1.1em;
+            border-bottom: 2px solid transparent;
+            transition: border-bottom 0.3s ease;
+        }
+
+        .home-link a:hover {
+            border-bottom: 2px solid #2c603d;
+        }
+
         .container {
             width: 100%;
             max-width: 1200px;
@@ -78,6 +99,10 @@
 
     <div class="hint-box">
         <strong>💡 SUGGERIMENTO:</strong> puoi usare la funzione "Trova nella pagina" del tuo browser per scrivere il nome che stai cercando.
+    </div>
+
+    <div class="home-link">
+        <a href="https://ersudriver.github.io/ersuoperator/">homepage</a>
     </div>
 
     <div class="container">
