--- a/rubrica_aziendale.html
+++ b/rubrica_aziendale.html
@@ -33,7 +33,7 @@
             width: 100%;
             margin-bottom: 15px;
             padding: 15px;
-            background-color: rgba(255, 255, 255, 0.9); /* Bianco semitrasparente per leggibilità */
+            background-color: rgba(255, 255, 255, 0.9);
             border-left: 5px solid #2c603d;
             border-radius: 4px;
             color: #2c603d;
@@ -42,12 +42,12 @@
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
 
-        /* Stile per il link Homepage */
+        /* Stile per il link Homepage CENTRATO */
         .home-link {
             max-width: 1200px;
             width: 100%;
-            margin-bottom: 15px;
-            text-align: left;
+            margin-bottom: 20px;
+            text-align: center; /* Centra il contenuto */
         }
 
         .home-link a {
@@ -55,12 +55,16 @@
             text-decoration: none;
             font-weight: 600;
             font-size: 1.1em;
-            border-bottom: 2px solid transparent;
-            transition: border-bottom 0.3s ease;
+            padding: 8px 20px;
+            border: 2px solid #2c603d; /* Crea un effetto pulsante */
+            border-radius: 25px;
+            transition: all 0.3s ease;
+            display: inline-block;
         }
 
         .home-link a:hover {
-            border-bottom: 2px solid #2c603d;
+            background-color: #2c603d;
+            color: #a4bb5b; /* Inverte i colori al passaggio del mouse */
         }
 
         .container {
@@ -102,7 +106,7 @@
     </div>
 
     <div class="home-link">
-        <a href="https://ersudriver.github.io/ersuoperator/">homepage</a>
+        <a href="https://ersudriver.github.io/ersuoperator/">torna alla homepage</a>
     </div>
 
     <div class="container">
