Update suggestion text for browser find function

--- a/rubrica_aziendale.html
+++ b/rubrica_aziendale.html
@@ -102,7 +102,7 @@
     <h1>Rubrica Aziendale</h1>
 
     <div class="hint-box">
-        <strong>💡 SUGGERIMENTO:</strong> puoi usare la funzione "Trova nella pagina" del tuo browser per scrivere il nome che stai cercando.
+        <strong>💡 SUGGERIMENTO:</strong> puoi usare la funzione "Trova nella pagina" nel menù del tuo browser per scrivere il nome che stai cercando.
     </div>
 
     <div class="home-link">
