Remove office contact and update homepage link
Removed an unused office contact row and updated the homepage link.

--- a/coordinatori.html
+++ b/coordinatori.html
@@ -154,11 +154,6 @@
                 <td><a href="tel:+393455927763">3455927763</a></td>
                 <td>Spazzamento</td>
             </tr>
-            <tr>
-                <td>UFFICIO</td>
-                <td><a href="tel:+390584556677">nonumber</a></td>
-                <td>-</td>
-            </tr>
         </tbody>
     </table>
 
@@ -166,7 +161,9 @@
         scarica questi contatti in rubrica
     </a>
 
-    <a href="index.html" class="link-home">homepage</a>
+ <div class="home-link">
+        <a href="https://ersudriver.github.io/ersuoperator/">torna alla homepage</a>
+    </div>
 
 </body>
 </html>
