Update homepage link to new URL

--- a/meccanici.html
+++ b/meccanici.html
@@ -172,7 +172,9 @@
         scarica questi contatti in rubrica
     </a>
 
-    <a href="index.html" class="link-home">homepage</a>
+ <div class="home-link">
+        <a href="https://ersudriver.github.io/ersuoperator/">torna alla homepage</a>
+    </div>
 
 </body>
 </html>
