--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
             padding: 0;
         }
 
-        body {
+       body {
             font-family: 'Josefin Sans', sans-serif;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
-            background-color: #a4bb5b; 
+            /* Cambiato da background-color a background-image */
+            background-image: url('wallpaper.jpg'); 
             color: #2c603d;            
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
+            background-repeat: no-repeat;
         }
 
         .header-img {
@@ -168,3 +170,4 @@
 
 </body>
 </html>
+
