--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </head>
 <body>
 
-    <img src="hder.jpg" alt="Header" class="header-img">
+    <img src="hder.png" alt="Header" class="header-img">
 
     <footer>
         <div class="footer-links">
@@ -170,4 +170,5 @@
 
 </body>
 </html>
+
 
