--- a/meccanici.html
+++ b/meccanici.html
@@ -9,15 +9,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     
     <style>
-        body {
+       body {
             font-family: 'Josefin Sans', sans-serif;
-            /* Impostazione dello sfondo con il colore richiesto */
-            background-color: #a4bb5b; 
-            padding: 20px;
+            min-height: 100vh;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            min-height: 100vh;
+            /* Cambiato da background-color a background-image */
+            background-image: url('wallpaper.jpg'); 
+            color: #2c603d;            
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
         }
 
         table {
