--- a/operatori.html
+++ b/operatori.html
@@ -11,14 +11,16 @@
     <style>
         body {
             font-family: 'Josefin Sans', sans-serif;
-            background-color: #a4bb5b; 
-            padding: 20px;
+            min-height: 100vh;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            margin: 0;
+            /* Cambiato da background-color a background-image */
+            background-image: url('wallpaper.jpg'); 
+            color: #2c603d;            
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
         }
 
         .container {
