--- a/rubrica_aziendale.html
+++ b/rubrica_aziendale.html
@@ -7,15 +7,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     
     <style>
-        body {
+       body {
             font-family: 'Josefin Sans', sans-serif;
-            margin: 0;
-            padding: 15px;
-            background-color: #a4bb5b; /* Colore sfondo richiesto */
-            color: #2c603d; /* Colore testo richiesto */
+            min-height: 100vh;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            /* Cambiato da background-color a background-image */
+            background-image: url('wallpaper.jpg'); 
+            color: #2c603d;            
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
         }
 
         h1 {
