--- a/rubrica_aziendale.html
+++ b/rubrica_aziendale.html
@@ -7,27 +7,52 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     
     <style>
-       body {
+        body {
             font-family: 'Josefin Sans', sans-serif;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
-            /* Cambiato da background-color a background-image */
+            align-items: center; /* CENTRA TUTTO IL CONTENUTO */
             background-image: url('wallpaper.jpg'); 
             color: #2c603d;            
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
             background-repeat: no-repeat;
+            margin: 0;
+            padding: 20px;
         }
 
         h1 {
             color: #2c603d;
-            margin-bottom: 20px;
-            font-size: 2rem;
+            margin-bottom: 10px;
+            font-size: 2.2rem;
             font-weight: 600;
             text-align: center;
             letter-spacing: 2px;
+        }
+
+        /* STILE NUOVO PULSANTE SCARICA TUTTO */
+        .download-container {
+            margin-bottom: 25px;
+            text-align: center;
+        }
+
+        .btn-main-download {
+            background-color: #2c603d;
+            color: white;
+            text-decoration: none;
+            padding: 12px 25px;
+            border-radius: 50px;
+            font-weight: 600;
+            display: inline-block;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            transition: transform 0.2s, background-color 0.3s;
+        }
+
+        .btn-main-download:hover {
+            background-color: #3e7a52;
+            transform: translateY(-2px);
         }
 
         .hint-box {
@@ -44,12 +69,11 @@
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
 
-        /* Stile per il link Homepage CENTRATO */
         .home-link {
             max-width: 1200px;
             width: 100%;
             margin-bottom: 20px;
-            text-align: center; /* Centra il contenuto */
+            text-align: center;
         }
 
         .home-link a {
@@ -58,7 +82,7 @@
             font-weight: 600;
             font-size: 1.1em;
             padding: 8px 20px;
-            border: 2px solid #2c603d; /* Crea un effetto pulsante */
+            border: 2px solid #2c603d;
             border-radius: 25px;
             transition: all 0.3s ease;
             display: inline-block;
@@ -66,7 +90,7 @@
 
         .home-link a:hover {
             background-color: #2c603d;
-            color: #a4bb5b; /* Inverte i colori al passaggio del mouse */
+            color: white;
         }
 
         .container {
@@ -96,12 +120,19 @@
             color: #2c603d;
             font-weight: 400;
             padding-bottom: 20px;
+            text-align: center;
         }
     </style>
 </head>
 <body>
 
     <h1>Rubrica Aziendale</h1>
+
+    <div class="download-container">
+        <a href="rubrica_aziendale.vcf" class="btn-main-download">
+            scarica tutta la rubrica
+        </a>
+    </div>
 
     <div class="hint-box">
         <strong>💡 SUGGERIMENTO:</strong> puoi usare la funzione "Trova nella pagina" nel menù del tuo browser per scrivere il nome che stai cercando.
@@ -118,7 +149,7 @@
     </div>
 
     <footer>
-        Dati gestiti tramite Google Sheets &bull; 2025
+        Dati gestiti tramite Google Sheets &bull; 2026
     </footer>
 
 </body>
