--- a/rubrica_aziendale.html
+++ b/rubrica_aziendale.html
@@ -130,7 +130,7 @@
 
     <div class="download-container">
         <a href="rubrica_aziendale.vcf" class="btn-main-download">
-            scarica tutta la rubrica
+            scarica tutti i contatti 
         </a>
     </div>
 
